--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bellota:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Julius+Sans+One&family=Story+Script&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -16,7 +21,7 @@
                 <path fill="currentColor"
                     d="M320 96C443.7 96 544 196.3 544 320C544 443.7 443.7 544 320 544C196.3 544 96 443.7 96 320C96 196.3 196.3 96 320 96zM320 576C461.4 576 576 461.4 576 320C576 178.6 461.4 64 320 64C178.6 64 64 178.6 64 320C64 461.4 178.6 576 320 576zM304 416L304 352L336 352L336 416L304 416zM272 416L248 416C234.7 416 224 405.3 224 392L224 270.9L320 196.2L416 270.9L416 392C416 405.3 405.3 416 392 416L368 416L368 352C368 334.3 353.7 320 336 320L304 320C286.3 320 272 334.3 272 352L272 416zM192 295.8L192 392C192 422.9 217.1 448 248 448L392 448C422.9 448 448 422.9 448 392L448 295.8L454.2 300.6C461.2 306 471.2 304.8 476.7 297.8C482.2 290.8 480.9 280.8 473.9 275.3L329.9 163.3C324.1 158.8 316 158.8 310.3 163.3L166.3 275.3C159.3 280.7 158.1 290.8 163.5 297.8C168.9 304.8 179 306 186 300.6L192.2 295.8z" />
             </svg>
-            <div class="box_cusca" >
+            <div class="box_busca">
                 <svg class="icone_lupa" xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 640 640"><!--! Font Awesome Pro 7.0.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2025 Fonticons, Inc. -->
                     <path fill="currentColor"
@@ -56,6 +61,19 @@
         </div>
 
     </header>
+    <main>
+        <section class="banner">
+        </section>
+        <section class="container" >
+            <h1 class="acessivel" >produtos de chocolate</h1>
+            <div class="titulo">
+                <span>
+                    chocolate
+                </span>
+                <hr>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
