finalizei a tela de produtos

--- a/index.html
+++ b/index.html
@@ -64,16 +64,91 @@
     <main>
         <section class="banner">
         </section>
-        <section class="container" >
-            <h1 class="acessivel" >produtos de chocolate</h1>
+        <section class="container">
+            <h1 class="acessivel">produtos de chocolate</h1>
             <div class="titulo">
                 <span>
                     chocolate
                 </span>
                 <hr>
             </div>
+            <section class="cards">
+
+                <div class="card">
+                    <img src="./Assets/imgs/choc-belga.png" alt="uma fatia do bolo de chocolate belga">
+                    <h2>Chocolate Belga</h2>
+                    <p>Bolo macio de chocolate, aplicado granulado que
+                        traz crocância e um sabor irresistível. </p>
+                    <span>
+                        R$80,00 kg
+                    </span>
+                </div>
+
+                <div class="card">
+                    <img src="./Assets/imgs/cenoura-choc.png"
+                        alt="uma fatia do bolo de cenoura com cobertura de chocolate">
+                    <h2>Cenoura com chocolate</h2>
+                    <p>Bolo macio de cenoura com cobertura de chocolate e um sabor irresistível. </p>
+                    <span>
+                        R$80,00 kg
+                    </span>
+                </div>
+
+                <div class="card">
+                    <img src="./Assets/imgs/choc-ninho-morango.png" alt="uma fatia do bolo de ninho e morango">
+                    <h2>Ninho com morango</h2>
+                    <p>Bolo macio de baunilha, recheado com brigadeiro de ninho e pedachos de morango um sabor
+                        irresistível. </p>
+                    <span>
+                        R$105,00 kg
+                    </span>
+                </div>
+
+                <div class="card">
+                    <img src="./Assets/imgs/choc-pistache.png" alt="uma fatia do bolo de pistache">
+                    <h2>Pistache</h2>
+                    <p>Bolo macio de pistache, aplicado granulado que
+                        traz crocância e brigadeiro de pistache. </p>
+                    <span>
+                        R$150,00 kg
+                    </span>
+                </div>
+
+                <div class="card">
+                    <img src="./Assets/imgs/choc-ninho.png"
+                        alt="uma fatia do bolo de chocolate com creme de chocolate branco">
+                    <h2>Chocolate branco</h2>
+                    <p>Bolo macio de chocolate, com creme branco e pedaços de morango aplicado granulado que
+                        traz crocância e um sabor irresistível. </p>
+                    <span>
+                        R$80,00 kg
+                    </span>
+                </div>
+
+                <div class="card">
+                    <img src="./Assets/imgs/choc-oreo.png" alt="uma fatia do bolo de chocolate com pedacinhos de oreo">
+                    <h2>Chocolate ocm oreo</h2>
+                    <p>Bolo macio de chocolate, pedacinhos de oreo granulado que
+                        traz crocância e um sabor irresistível. </p>
+                    <span>
+                        R$100,00 kg
+                    </span>
+                </div>
+            </section>
         </section>
+
+        <a class="whatsapp" href="https://wa.me/5511999998888?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais!"
+            target="_blank">
+            <img src="/Assets/whatsapp.png" alt="">
+        </a>
+
+
     </main>
+<footer>
+    <p>
+        Bolos do Jacquin® - Todos os direitos reservados
+    </p>
+</footer>
 </body>
 
 </html>
