--- a/Cadastro/index.html
+++ b/Cadastro/index.html
@@ -4,16 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produtos</title>
+    <title>BJ - Cadastro</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Bellota:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Julius+Sans+One&family=Story+Script&display=swap"
         rel="stylesheet">
+
 </head>
 
 <body>
+
     <header>
         <div class="container_cabecalho">
             <svg class="icone_home" xmlns="http://www.w3.org/2000/svg"
@@ -61,94 +63,59 @@
         </div>
 
     </header>
+
     <main>
-        <section class="banner">
-        </section>
-        <section class="container">
-            <h1 class="acessivel">produtos de chocolate</h1>
-            <div class="titulo">
-                <span>
-                    chocolate
-                </span>
-                <hr>
+        <h1 class="acessivel"> Tela de cadastro e listagem de produtos</h1>
+
+        <section class="Container_cadastro">
+            <h2>Cadastro</h2>
+
+            <hr>
+            <div class="box_cadastro" >
+                <div class="cadastro_coluna1">
+                    <div class="Bolos">
+                        <label for="Bolo"> Bolo </label>
+                        <input type="text" name="" id="Bolo">
+                    </div>
+                    <div class="categoria_img">
+                        <div class="categoria">
+                            <label for="cat">categoria</label>
+                            <input type="text" name="" id="cat">
+
+                        </div>
+                        <div class="img">
+                            <label for="">Imagem</label>
+                            <input type="file" name="" id="img">
+
+                        </div>
+
+                    </div>
+
+                    <div class="valor_peso">
+                        <div class="valor">
+                            <label for="val">Valor</label>
+                            <input type="text" name="" id="val">
+                        </div>
+
+                        <div class="peso">
+                            <label for="peso">Peso</label>
+                            <input type="text" name="" id="peso">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cadastro_coluna2">
+                    <label for="desc">Descrição</label>
+                    <textarea name="" id="desc"></textarea>
+
+                </div>
             </div>
-            <section class="cards">
-
-                <div class="card">
-                    <img src="./Assets/imgs/choc-belga.png" alt="uma fatia do bolo de chocolate belga">
-                    <h2>Chocolate Belga</h2>
-                    <p>Bolo macio de chocolate, aplicado granulado que
-                        traz crocância e um sabor irresistível. </p>
-                    <span>
-                        R$80,00 kg
-                    </span>
-                </div>
-
-                <div class="card">
-                    <img src="./Assets/imgs/cenoura-choc.png"
-                        alt="uma fatia do bolo de cenoura com cobertura de chocolate">
-                    <h2>Cenoura com chocolate</h2>
-                    <p>Bolo macio de cenoura com cobertura de chocolate e um sabor irresistível. </p>
-                    <span>
-                        R$80,00 kg
-                    </span>
-                </div>
-
-                <div class="card">
-                    <img src="./Assets/imgs/choc-ninho-morango.png" alt="uma fatia do bolo de ninho e morango">
-                    <h2>Ninho com morango</h2>
-                    <p>Bolo macio de baunilha, recheado com brigadeiro de ninho e pedachos de morango um sabor
-                        irresistível. </p>
-                    <span>
-                        R$105,00 kg
-                    </span>
-                </div>
-
-                <div class="card">
-                    <img src="./Assets/imgs/choc-pistache.png" alt="uma fatia do bolo de pistache">
-                    <h2>Pistache</h2>
-                    <p>Bolo macio de pistache, aplicado granulado que
-                        traz crocância e brigadeiro de pistache. </p>
-                    <span>
-                        R$150,00 kg
-                    </span>
-                </div>
-
-                <div class="card">
-                    <img src="./Assets/imgs/choc-ninho.png"
-                        alt="uma fatia do bolo de chocolate com creme de chocolate branco">
-                    <h2>Chocolate branco</h2>
-                    <p>Bolo macio de chocolate, com creme branco e pedaços de morango aplicado granulado que
-                        traz crocância e um sabor irresistível. </p>
-                    <span>
-                        R$80,00 kg
-                    </span>
-                </div>
-
-                <div class="card">
-                    <img src="./Assets/imgs/choc-oreo.png" alt="uma fatia do bolo de chocolate com pedacinhos de oreo">
-                    <h2>Chocolate com oreo</h2>
-                    <p>Bolo macio de chocolate, pedacinhos de oreo granulado que
-                        traz crocância e um sabor irresistível. </p>
-                    <span>
-                        R$100,00 kg
-                    </span>
-                </div>
-            </section>
+            <input type="button" value="Cadastrar">
         </section>
-
-        <a class="whatsapp" href="https://wa.me/5511999998888?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais!"
-            target="_blank">
-            <img src="/Assets/whatsapp.png" alt="">
-        </a>
 
 
     </main>
-<footer>
-    <p>
-        Bolos do Jacquin® - Todos os direitos reservados
-    </p>
-</footer>
+
 </body>
 
 </html>
