--- a/index.html
+++ b/index.html
@@ -137,9 +137,11 @@
             </section>
         </section>
 
-        <a class="whatsapp" href="https://wa.me/5511999998888?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais!"
+      
+
+         <a class="whatsapp" href="https://wa.me/5511999998888?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais!"
             target="_blank">
-            <img src="/Assets/whatsapp.png" alt="">
+            <img src="../Bolos-Do-Jacquin/Assets/whatsapp.png" alt="">
         </a>
 
 
@@ -148,6 +150,7 @@
     <p>
         Bolos do Jacquin® - Todos os direitos reservados
     </p>
+
 </footer>
 </body>
 
